fix the category dropdown on mobile version (header)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -30,7 +30,7 @@
     cursor: pointer;
     z-index: 1001;
 
-    span {
+    &-line {
       display: block;
       width: 100%;
       height: 0.4rem;
@@ -73,6 +73,7 @@
   &__links {
     text-decoration: none;
     color: #222222;
+    width: auto;
     font-size: 1.6rem;
     font-weight: 600;
     padding: 1rem 0;
@@ -81,15 +82,22 @@
       color: #555;
     }
   }
+  &__category {
+    position: relative;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &:hover .nav__dropdown {
+      display: flex;
+      align-items: center;
+    }
+  }
   &__dropdown {
     display: none;
     position: relative;
     flex-direction: column;
     margin-top: 1rem;
-
-    .nav__category:hover & {
-      display: flex;
-    }
 
     &-item {
       padding: 1rem;
@@ -97,7 +105,6 @@
       color: #555;
 
       &:hover {
-        background-color: $white-gray;
         color: #333;
       }
     }
@@ -125,7 +132,13 @@
     font-size: 1.7rem;
     background-color: $nav-font-color;
     @include btn-style;
+    transition: transform 0.3s ease-out;
+
+    &:hover {
+      animation: jelly 0.5s;
+    }
   }
+
   &__alert {
     font-size: 1.5rem;
   }
@@ -171,6 +184,7 @@
     &__category {
       position: relative;
       cursor: pointer;
+
       &:hover .nav__dropdown {
         display: flex;
       }
