--- a/src/style/partials/_mixins.scss
+++ b/src/style/partials/_mixins.scss
@@ -35,6 +35,7 @@
   display: flex;
   flex-direction: column;
 }
+
 //animations
 @keyframes grow {
   from {
@@ -117,5 +118,19 @@
   }
   100% {
     opacity: 0;
+  }
+}
+
+@keyframes jelly {
+  25% {
+    transform: scale(0.9, 1.1);
+  }
+
+  50% {
+    transform: scale(1.1, 0.9);
+  }
+
+  75% {
+    transform: scale(0.95, 1.05);
   }
 }
